# OpenWhale

./: .gitignore  README.md  llmapi.py  main.py  pyproject.toml
brain/: SOUL.md  TOOLS.md
